manifest/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: dev
spec:
  selector:
    app: auth-api
  ports:
  - port: 3000
    targetPort: 3000
