manifest/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-api
  namespace: dev
  labels:
    name: auth-api
spec:
  rules:
  - host: dev.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: auth-api
            port: 
              number: 3000
